# user-models

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: happiness_happy_000.txt  happiness_happy_001.txt  happiness_happy_002.txt  happiness_happy_003.txt  happiness_happy_004.txt  happiness_happy_005.txt  happiness_happy_006.txt  happiness_happy_007.txt  happiness_happy_008.txt  happiness_happy_009.txt  happiness_happy_010.txt  happiness_happy_011.txt  happiness_happy_012.txt  happiness_happy_013.txt  happiness_happy_014.txt  happiness_happy_015.txt  happiness_happy_016.txt  happiness_happy_017.txt  happiness_happy_018.txt  happiness_happy_019.txt  happiness_happy_020.txt  happiness_happy_021.txt  happiness_happy_022.txt  happiness_happy_023.txt  happiness_happy_024.txt  happiness_happy_025.txt  happiness_happy_026.txt  happiness_happy_027.txt  happiness_happy_028.txt  happiness_happy_029.txt  happiness_happy_030.txt  happiness_happy_031.txt  happiness_happy_032.txt  happiness_happy_033.txt  happiness_happy_034.txt  happiness_happy_035.txt  happiness_happy_036.txt  happiness_happy_037.txt  happiness_happy_038.txt  happiness_happy_039.txt  (+8977 more)
src/: experiments.ipynb  generate_data.py  generate_visualizations.py  infer.py  playground.py  probe.py  repair_existing_data.py  steer.py  steering_probe.py  vis.py
wandb/: latest-run
wandb/run-20250911_232827-t3l9zshb/: run-t3l9zshb.wandb
wandb/run-20250911_233330-f5jlnyo6/: run-f5jlnyo6.wandb
wandb/run-20250911_233413-3oxz70c1/: run-3oxz70c1.wandb
wandb/run-20250911_233804-42vla3cp/: run-42vla3cp.wandb
(+167 files in other folders)
